# arduino-learning

Ampel_mit_Taster/: Ampel_mit_Taster.ino  Ampel_mit_Taster_Arduino.docx
Remote_IO_Board/: readme.md
Remote_IO_Board/Arduino_IO_Program.c/: Arduino_IO_Program.c.ino  ArduninoIO_API_v2.h
Remote_IO_Board/Windows_Test_Client/: ArduinoIO_Demo_TestClient.cpp  ArduinoIO_Demo_TestClient.h  ArduinoIO_TCPClient.cpp  ArduinoIO_TCPClient.h  CMakeLists.txt
Zeitmesser_optisch_mitAnzeige/: Anleitung.txt  Zeitmesser_optisch_mitAnzeige.ino
